2005-10-20
	- Bugfix release (2.03)
	- Fix for cache_umask: individual files were not created with correct
	  permissions (credit to Chris Huegle).

2004-03-23
	- Bugfix release (2.02)
	- Update require to 5.006 since 'use warnings' depends on it
	  (credit to Adam Kennedy).
	- Fixed a comparison issue with DB_File, where it can compare undef's.

2003-12-15
	- Fixed the Cache::freeze() shortcut method which wasn't passing
	  arguments to Cache::Entry::freeze() (credit to Ingo Blechschmidt).

2003-08-18
	- Bugfix release (2.01)
	 o Fixed parsing of all digit expiry times
	 o Fixed use of scalar validity in Cache::Memory
	 o Allowed validity to be set on non-existant entry
	   (sets entry data to zero length)
	 o Fixed package name for Cache::Memory::HeapElem
	 o Documentation fixes

2003-07-07
	- Initial release (2.00)