@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Cache
-version:      2.03
+version:      2.04
 version_from: lib/Cache.pm
 installdirs:  site
 requires:
