@@ -31,7 +31,7 @@ use Carp;
 
 use fields qw(db dbhash);
 
-our $VERSION = '2.03';
+our $VERSION = '2.04';
 
 # common info object
 my $BTREEINFO = new DB_File::BTREEINFO;
@@ -250,12 +250,12 @@ Cache::File
 
 =head1 COPYRIGHT
 
- Copyright (C) 2003 Chris Leishman.  All Rights Reserved.
+ Copyright (C) 2003-2006 Chris Leishman.  All Rights Reserved.
 
 This module is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY KIND,
 either expressed or implied. This program is free software; you can
 redistribute or modify it under the same terms as Perl itself.
 
-$Id: Heap.pm,v 1.5 2005/10/20 12:52:03 caleishm Exp $
+$Id: Heap.pm,v 1.6 2006/01/31 15:23:58 caleishm Exp $
 
 =cut
