@@ -25,7 +25,7 @@ use Carp;
 use base qw(Cache::Entry);
 use fields qw(store_entry);
 
-our $VERSION = '2.03';
+our $VERSION = '2.04';
 
 
 sub new {
@@ -150,7 +150,7 @@ sub _set_expiry {
     my $exp_elem = $entry->{exp_elem};
 
     if ($exp_elem) {
-        $cache->del_expiry_from_heap($exp_elem);
+        $cache->del_expiry_from_heap($self->{key}, $exp_elem);
         $entry->{exp_elem} = undef;
     }
 
@@ -277,12 +277,12 @@ Cache::Entry, Cache::Memory
 
 =head1 COPYRIGHT
 
- Copyright (C) 2003 Chris Leishman.  All Rights Reserved.
+ Copyright (C) 2003-2006 Chris Leishman.  All Rights Reserved.
 
 This module is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY KIND,
 either expressed or implied. This program is free software; you can
 redistribute or modify it under the same terms as Perl itself.
 
-$Id: Entry.pm,v 1.6 2005/10/20 12:52:03 caleishm Exp $
+$Id: Entry.pm,v 1.8 2006/01/31 15:23:58 caleishm Exp $
 
 =cut
