@@ -28,7 +28,7 @@ use Cache::Null::Entry;
 use base qw(Cache);
 use fields qw(cache_root);
 
-our $VERSION = '2.03';
+our $VERSION = '2.04';
 
 =head1 CONSTRUCTOR
 
@@ -113,12 +113,12 @@ Cache
 
 =head1 COPYRIGHT
 
- Copyright (C) 2003 Chris Leishman.  All Rights Reserved.
+ Copyright (C) 2003-2006 Chris Leishman.  All Rights Reserved.
 
 This module is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY KIND,
 either expressed or implied. This program is free software; you can
 redistribute or modify it under the same terms as Perl itself.
 
-$Id: Null.pm,v 1.3 2005/10/20 12:52:03 caleishm Exp $
+$Id: Null.pm,v 1.4 2006/01/31 15:23:58 caleishm Exp $
 
 =cut
