@@ -16,7 +16,7 @@ use strict;
 use warnings;
 use Carp;
 
-our $VERSION = '2.03';
+our $VERSION = '2.04';
 
 
 sub new {
@@ -51,12 +51,12 @@ Cache
 
 =head1 COPYRIGHT
 
- Copyright (C) 2003 Chris Leishman.  All Rights Reserved.
+ Copyright (C) 2003-2006 Chris Leishman.  All Rights Reserved.
 
 This module is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY KIND,
 either expressed or implied. This program is free software; you can
 redistribute or modify it under the same terms as Perl itself.
 
-$Id: RemovalStrategy.pm,v 1.3 2005/10/20 12:52:03 caleishm Exp $
+$Id: RemovalStrategy.pm,v 1.4 2006/01/31 15:23:58 caleishm Exp $
 
 =cut
