@@ -1,3 +1,11 @@
+2006-02-01
+	- Bugfix release (2.04)
+	- Fix for failure to call load_callback when verify_callback
+	  fails the result (credit to Chris Fletcher).
+
+2005-11-08
+	- Fix for set_expiry in Cache::Memory (credit to Sean M. Egan).
+
 2005-10-20
 	- Bugfix release (2.03)
 	- Fix for cache_umask: individual files were not created with correct
